offer management done

--- a/ecom/templates/admin/adminbase.html
+++ b/ecom/templates/admin/adminbase.html
@@ -210,7 +210,7 @@ html { height: 100%;}
   content: "\f145" !important;  
 }  
 .ban::before {  
-  content: "\f03e" !important;  
+  content: "\f198" !important;  
 }  
 .ret::before {  
   content: "\f01e" !important;  
@@ -374,7 +374,7 @@ a[href*="#contact"]::before {
        <li><a href="/admorders/" class="ord"> Orders </a> </li>  
       <li><a href="/admreturns/" class="ret">Returns</a></li>  
       <li><a href="/view_coupon/" class="coup">Coupons</a></li>  
-      <li><a href="/admbanners/" class="ban">Banners</a></li>  
+      <li><a href="/view_brand_offers/" class="ban">Offers</a></li>  
       <li><a href="/admlogout/" class="logou">Logout</a></li>  
 
 
