product review added

--- a/ecom/templates/profile/order_history.html
+++ b/ecom/templates/profile/order_history.html
@@ -29,8 +29,8 @@
                 <td>{{ item.address.name }}</td>
                 <td>
                 {{ item.address.country }},{{ item.address.state }},{{ item.address.district }} <br>
-                    House:{{ item.address.house }},{{ item.address.town }},
-                    Pin: {{ item.address.pincode }} <br>
+                    House:{{ item.address.house }},{{ item.address.town }}, <br>
+                    Pin: {{ item.address.pincode }},   
                     no: {{ item.address.number }} 
                 </td>
                 <td>{{ item.order_date }}</td>
